--- a/source/SCSS/Source/Themes/dark/_select.scss
+++ b/source/SCSS/Source/Themes/dark/_select.scss
@@ -6,30 +6,16 @@
     }
 
     &_options {
-        position: absolute;
-        top: 40px;
-        width: 100%;
         background-color: $gray-800;
         box-shadow: $input-shadow;
-        overflow: hidden;
-        z-index: 200;
         border: 1px solid $gray-700;
-        border-radius: 4px;
-        display: none;
 
         .select_option {
-            padding: 10px 20px;
             color: $gray-100;
 
             &:hover {
                 background-color: $gray-700;
             }
-        }
-    }
-
-    &_active {
-        .select_options {
-            display: block;
         }
     }
 }
